--- a/D2D-AliceEngine/Engine/Engine.vcxproj
+++ b/D2D-AliceEngine/Engine/Engine.vcxproj
@@ -156,6 +156,7 @@
     <ClInclude Include="Component\ScriptComponent.h" />
     <ClInclude Include="Component\InputComponent.h" />
     <ClInclude Include="Component\StatComponent.h" />
+    <ClInclude Include="Core\StatTraits.h" />
     <ClInclude Include="System\InputSystem.h" />
     <ClInclude Include="System\ScriptSystem.h" />
     <ClInclude Include="System\RenderSystem.h" />
@@ -195,6 +196,7 @@
     <ClCompile Include="Component\ScriptComponent.cpp" />
     <ClCompile Include="Component\InputComponent.cpp" />
     <ClCompile Include="Component\StatComponent.cpp" />
+    <ClCompile Include="Core\StatTraits.cpp" />
     <ClCompile Include="System\InputSystem.cpp" />
     <ClCompile Include="System\ScriptSystem.cpp" />
     <ClCompile Include="System\RenderSystem.cpp" />
