--- a/D2D-AliceEngine/Engine/Engine.vcxproj
+++ b/D2D-AliceEngine/Engine/Engine.vcxproj
@@ -151,12 +151,14 @@
     <ClInclude Include="Core\Delegate.h" />
     <ClInclude Include="Helpers\FileHelper.h" />
     <ClInclude Include="Helpers\FFmpegHelper.h" />
+    <ClInclude Include="Core\ObjectHandler.h" />
     <ClInclude Include="Object\Camera.h" />
     <ClInclude Include="Component\RenderComponent.h" />
     <ClInclude Include="Component\ScriptComponent.h" />
     <ClInclude Include="Component\InputComponent.h" />
     <ClInclude Include="Component\StatComponent.h" />
     <ClInclude Include="Core\StatTraits.h" />
+    <ClInclude Include="Manager\PackageResourceManager.h" />
     <ClInclude Include="System\InputSystem.h" />
     <ClInclude Include="System\ScriptSystem.h" />
     <ClInclude Include="System\RenderSystem.h" />
@@ -191,12 +193,14 @@
     <ClCompile Include="Core\Delegate.cpp" />
     <ClCompile Include="Helpers\FileHelper.cpp" />
     <ClCompile Include="Helpers\FFmpegHelper.cpp" />
+    <ClCompile Include="Core\ObjectHandler.cpp" />
     <ClCompile Include="Object\Camera.cpp" />
     <ClCompile Include="Component\RenderComponent.cpp" />
     <ClCompile Include="Component\ScriptComponent.cpp" />
     <ClCompile Include="Component\InputComponent.cpp" />
     <ClCompile Include="Component\StatComponent.cpp" />
     <ClCompile Include="Core\StatTraits.cpp" />
+    <ClCompile Include="Manager\PackageResourceManager.cpp" />
     <ClCompile Include="System\InputSystem.cpp" />
     <ClCompile Include="System\ScriptSystem.cpp" />
     <ClCompile Include="System\RenderSystem.cpp" />
