--- a/D2D-AliceEngine/Engine/Engine.vcxproj
+++ b/D2D-AliceEngine/Engine/Engine.vcxproj
@@ -179,9 +179,9 @@
     <ClInclude Include="Component\TransformComponent.h" />
     <ClInclude Include="System\TransformSystem.h" />
     <ClInclude Include="Math\TColor.h" />
-    <ClInclude Include="Core\Time.h" />
     <ClInclude Include="Manager\UpdateTaskManager.h" />
     <ClInclude Include="Core\Tickable.h" />
+    <ClInclude Include="Manager\TimerManager.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Component\AnimationComponent.cpp" />
@@ -227,9 +227,9 @@
     <ClCompile Include="Component\TransformComponent.cpp" />
     <ClCompile Include="System\TransformSystem.cpp" />
     <ClCompile Include="Math\TColor.cpp" />
-    <ClCompile Include="Core\Time.cpp" />
     <ClCompile Include="Manager\UpdateTaskManager.cpp" />
     <ClCompile Include="Core\Tickable.cpp" />
+    <ClCompile Include="Manager\TimerManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Spine2D\Spine2D.vcxproj">
